- SF Patch #1582754 CreateAdministrator for dummies
  Creation of admin via [dspace]/bin/create-administrator for a given email, irrespective of the email
  belonging to an allready registered user.

(Richard Jones)
- SF Patch #1659868 Improved database level debugging
- SF Patch #1659901 Import community and collection structure
- SF Patch #1659837 ItemIterator now deals with item ids also

(Mike Judd)
- SF Patch #1528142 Malformed OAI-PMH response: illegal bytes in UTF-8 for SF Bug #1490162

(Claudia Juergen)
- Added link to controlled vocabulary configuration as for SF Bug #1456593 links to controlled vocab docs required
- SF Patch #1623599 for SF Bug #1217068 Failed to complete review in workflow
- SF Patch #1619455 for SF bug #1619439 MyDSpace Group Membership Special Groups
- SF Patch #1606719 for feature request #1145371 Link to admin area
- SF Patch #1610030 for SF Bug #1076506 Item import command line option for application of template
- SF Patch #1624212 for SF Bug #1606449 Improve usability of bitstream list in item display
- SF Patch #1636954 for SF feature request #1636817 MyDSpace make group display configurable
- SF Patch #1624323 for SF feature request #1549297 Refinement of enable suggest feature
- Fix for SF Bug #1653151 Checker file shows filter-media (just a typo in header)
- SF Patch #1676370 Bug #1648070 Statistics does not use navbar="admin"
- Fix for SF Bug #1690573 dspace-admin, edit item trailing white spaces

(Stuart Lewis)
- SF Patch #1670110 for SF Bug #1670106 Onebox and textarea fail when visibility set to workflow
- SF Patch #1628889 Improve file size descriptions in ItemTag
- SF Patch #1641678 [dspace]/bin scripts for import and export
- SF Patch #1642336 Restrict domains of self-registered users

(Monika Mevenkamp)
- SF Patch #1654469 stat scripts always return exit code 1
- SF Patch #1654466 dsprop convenience script

(K. Nakagami)
- SF Patch #1591969 for SF bug #1583372 DCDate.toString returns invalid string